--- a/package.json
+++ b/package.json
@@ -1,39 +1,27 @@
 {
-  "name": "buddy",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "server",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "concurrently \"nodemon ./server/server.js\" \"npm run dev --prefix client\"",
+    "start": "nodemon ./server/server.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.6",
-    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1",
-    "path": "^0.12.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.1",
+    "mongoose": "^8.8.4",
+    "nodemon": "^3.1.9",
+    "path": "^0.12.7"
   }
 }
