--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "type": "module" ,
   "main": "server.js",
   "scripts": {
     "dev": "concurrently \"nodemon ./server/server.js\" \"npm run dev --prefix client\"",
