--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module" ,
   "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"nodemon ./server/server.js\" \"npm run dev --prefix client\"",
+    "dev": "nodemon ./server/server.js && npm run dev --prefix client",
     "start": "nodemon ./server/server.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
